# prompt-shield

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bench/: generate_corpus.py  run_benchmarks.sh
config/: default.toml
crates/prompt-shield/: Cargo.toml
crates/prompt-shield-cli/: Cargo.toml
crates/prompt-shield-cli/src/: main.rs
crates/prompt-shield-wasm/: Cargo.toml
crates/prompt-shield-wasm/src/: lib.rs
crates/prompt-shield/src/: config.rs  detection.rs  lib.rs  patterns.rs  report.rs  scanner.rs
crates/prompt-shield/tests/: integration.rs
crates/prompt-shield/tests/test_files/: clean_text.txt  instruction_override.txt  mixed_content.txt
docs/plans/: 2026-02-24-prompt-shield-design.md  2026-02-24-prompt-shield-implementation.md
