[package]
name = "prompt-shield-wasm"
version = "0.1.0"
edition = "2024"
description = "Fast prompt injection detection engine (WASM)"
repository = "https://github.com/nooesc/prompt-shield"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prompt-shield = { path = "../prompt-shield" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
